added green button, and text box

--- a/index.html
+++ b/index.html
@@ -7,31 +7,36 @@
 <body>
 <br>
 <br>
-<h1>Welcome to my website!</h1>
+<h1>Hiiiiiiiiiii!</h1>
 	<img src="http://s3.amazonaws.com/rapgenius/tumblr_mq00ubfnuK1s5fqy9o1_500.gif">
 	
-	<p id="egg">Hello welcome to my world!</p>
+	<p id="egg">Do you like money because if you do, you came to the right place!</p>
+	<br>
+	<br> 
 	<!--p.class-->
-	<p class="noah">I like to eat!</p>
-	<p>Hello</p>
-	<p>world</p>
-	<p>im</p>
-	<p>cool</p>
+	
 	<link rel="stylesheet" href="styles.css">
 	<script src="app.js"></script>
 
-	what do you like on your pizza?
+	  Would you like a million dollors?
 <br>
 <br>
 <br>
+   <input type="radio" name="wasted">Yes
+<br>
+<input type="radio" name="wasted">No
+<br>
+<input type="radio"name="wasted">Maybee
+<br>
+<br>
+<p> type you favorite number in the space bellow and click the green button to see if you have won a prize!</p>
 
-<input type="checkbox" name="pizza" value="chease"> cheese
-<br>
-<input type="checkbox" name="pizza" value="mushroom"> mushroom
-<br>
-<input type="checkbox" name="pizza" value="peperoni"> peperoni 
-<br>
-<input type="checkbox" name="pizza" value="bacon"> bacon
+<textarea rows="5" cols="30"></textarea> 
+
+
+
+<a href="http://heyyeyaaeyaaaeyaeyaa.com/">
+<img src="http://www.nhicolumbus.org/lime.png"width=5%>
 
 
 </body>
