--- a/Noah's Project.html
+++ b/Noah's Project.html
@@ -7,16 +7,13 @@
 <body>
 <br>
 <br>
-<h1>Welcome to my website!</h1>
+<h1>Hiiiiiiiiiii!</h1>
 	<img src="http://s3.amazonaws.com/rapgenius/tumblr_mq00ubfnuK1s5fqy9o1_500.gif">
 	
 	<p id="egg">Hello welcome to my world!</p>
 	<!--p.class-->
 	<p class="noah">I like to eat!</p>
-	<p>Hello</p>
-	<p>world</p>
-	<p>im</p>
-	<p>cool</p>
+
 	<link rel="stylesheet" href="styles.css">
 	<script src="app.js"></script>
 
